--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -1,6 +1,9 @@
 \section{Introduction}
 \label{sec:introduction}
 
+\internal{Chris}{I'm not entirely happy with the introduction.  I'd fiddle with it more, but I wonder if you have any suggestions
+on positioning the paper to make it fit more obviously in your session.}
+
 Given the specification of a mathematical structure (constants,
 functions, relations, and axioms), how do you know when a computer
 implementation is both correct and complete?
