--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -1,8 +1,16 @@
 \section{Introduction}
 \label{sec:introduction}
 
-\internal{Chris}{I'm not entirely happy with the introduction.  I'd fiddle with it more, but I wonder if you have any suggestions
-on positioning the paper to make it fit more obviously in your session.}
+\internal{Andrej}{I am actually quite happy with the introduction. It
+  will appeal to constructive mathematicians. It will appeal to the
+  Type Two Effectivity people when we tell them it's all Type Two
+  Effectivity, anyhow. Then there is Coquand, who will probably say
+  ``oh yes'' with a French accent, and will want to know exactly how
+  it's different from Coq. The implementors of exact real arithmetic
+  will like it if Iztok and I manage to implement something using RZ
+  for the CCA conference. There won't be many PL people in Siena. I
+  think we're fine. So I'd rather get the rest of the paper done. I
+  don't think the introduction neds to be rewritten.}
 
 Given the specification of a mathematical structure (constants,
 functions, relations, and axioms), how do you know when a computer
