--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -83,7 +83,7 @@ maps a field~$F$ to the 1-dimensional vector space over~$F$.
 		      \ibar \ileteclass{\ix}{\ipp}{\ie_1}{\ie_2}&\mbox{Equivalence class and picking a representative}\\
 		  | & \irz{\ie}
 		      \ibar \iletrz{\ix}{\ie_1}{\ie_2}&\mbox{Realized value and picking a realizer}\\
-		  | & \iconstrain{\ie}{\is}&\mbox{Type coercion (e.g., in or out of a subset)}\\
+		  | & \isubin{\ie}{\is} \ibar \isubout{\ie}{\is} &\mbox{Type coercion in and out of a subset}\\
 		  | & \ithe{\ix}{\is}{\ip}&\mbox{Definite description}\\
 		  | & \ilet{\ix}{\ie_1}{\ie_2}&\mbox{Local definition}\\[5pt]
 		
