--- a/doc/cie/translation.tex
+++ b/doc/cie/translation.tex
@@ -95,9 +95,13 @@ Constructions of sets in the input language are translated to
 corresponding constructions of modest sets. In
 Section~\ref{sec:modest-sets-pers} we saw how products, exponentials
 and their dependent versions are formed. We briefly review the
-remaining constructions. A disjoint union of modest sets
-$\isum{\il_1}{A}{\il_2}{B}$ is the modest set whose underlying type is
-the sum of underlying types,
+remaining constructions of modest sets. We only consider those
+constructions of terms that are not entirely straightforward.
+
+\paragraph{Disjoint union.}
+%
+A disjoint union of modest sets $\isum{\il_1}{A}{\il_2}{B}$ is the
+modest set whose underlying type is the sum of underlying types,
 %
 \begin{equation*}
   \typeOf{\isum{\il_1}{A}{\il_2}{B}} =
@@ -116,6 +120,8 @@ that we have
 \end{align*}
 %
 
+\paragraph{Subsets.}
+%
 The construction of modest subsets may look surprising at first, but
 it makes sense computationally. Given a modest sets~$A$ and a
 predicate~$\phi$ on~$A$, the modest subset $\set{x : A \such \phi(x)}$
@@ -140,10 +146,24 @@ provide a realizer~$u$ for the element itself, as well as~$v$
 witnessing~$\phi(x)$. The per which we get from this is
 %
 \begin{equation*}
-    (u_1, v_1) \per_{\set{x : A \such \phi(x)}} (u_2, v_2) \iff
-    u_1 \per_A u_2.
+  (u_1, v_1) \per_{\set{x : A \such \phi(x)}} (u_2, v_2) \iff
+  v_1 \rz \phi(u_1) \land v_2 \rz \phi(u_2) \land
+  u_1 \per_A u_2.
 \end{equation*}
+%
+The coercion $\isubout{e}{s}$ converts an element of the subset $s =
+\set{x : t \such \phi(x)}$ to an element of~$t$. At the level of
+realizers this is achieved by the first projection, which keeps a
+realizer for the element but forgets the one for~$\phi(e)$. The
+opposite coercion $\isubout{e}{s}$ takes an $e \in t$ and converts it
+to an element of the subset. This is only well-formed when $\phi(e)$
+is valid. Then, if $u \rz_t e$ and $v \rz \phi(e)$, a realizer for
+$\isubin{e}{s}$ is $(u, v)$. However, since RZ cannot in general find
+a~$v$ which validates~$\phi(e)$, it emits an obligation $(u,
+(\ooblig{v}{\typeOf{\phi}}{\oapp{\oapp{\phi}{u}}{v}}{v})$.
 
+\paragraph{Quotients.}
+%
 The category of modest sets has coequalizers, hence a quotient modest
 set $A/\rho$ may be constructed for an any equivalence relaton~$\rho$
 on~$A$. However, because equality does not carry any computational
@@ -162,6 +182,16 @@ on~$A$, the quotient $A/\rho$ is the modest set determined by
   u \rz_{A/\rho} \xi &\iff \some{y}{\xi}{u \rz_A y}.
 \end{align*}
 %
+Translation of and equivalence class $\ieclass{e}{\rho}$ is quite
+simple: since a realizer for~$e$ also realizes $\ieclass{e}{\rho}$, RZ
+simply uses the same realizer. The elimination term
+$\ileteclass{x}{\rho}{\xi}{e}$, which means ``let $x$ be any element
+of $\rho$-equivalence class $\xi$ in~$e$'', is trickier to translate.
+It is only well-formed when $e$ does not depend on the choice of~$x$,
+but this is something RZ cannot check. Therefore, if $u$ realizes
+$\xi$, RZ uses $u$ as a realizer for~$x$ and emits an obligation
+saying that the choice of a realizer for~$x$ does not affect~$e$.
+
 Luckily, it seems that many equivalence relations occuring in
 computable mathematics are stable, or can be made stable with a little
 bit of manipulation. For example, Cauchy sequences $(a_n)_{n\in\NN}$
@@ -191,6 +221,9 @@ practical implementations of real numbers present real numbers with
 rapid Cauchy sequences so that they can avoid the overhead of carrying
 with each sequence a realizer for~\eqref{eq:cauchy}.
 
+
+\paragraph{The underlying set of realizers.}
+%
 A specific kind of construction on a modest set~$A$ is the underlying
 modest set of realizers $\irz{A}$, defined by
 %
@@ -207,12 +240,42 @@ The corresponding per is
   u_1 \per_{\irz{A}} u_2 \iff u_1 \in \support{A} \land u_1 = u_2.
 \end{equation*}
 %
-It validates Aczel's presentation axiom, see
+An element $r \in \irz{A}$ realizes a unique element $\irz{r} \in A$.
+The elimination term $\iletrz{x}{e_1}{e_2}$, which means ``let $x$ be
+any realizer for~$e_1$ in $e_2$'', is only well-formed if $e_2$ does
+not depend on the choice of~$x$. This is an uncheckable conditions,
+hence RZ emits a suitable obligation in the output, and uses for $x$
+the same realizer as for~$e_2$.
+
+The construction $\irz{A}$ validates Aczel's presentation axiom, see
 Section~\ref{sec:axiom-choice}. In the input language it gives us
 access to realizers which is useful because many constructions in
 computable mathematics, such as those in Type Two
 Effectivity~\cite{Wei00}, are explicitly expressed in terms of
 realizers.
+
+
+\paragraph{Definite description.}
+%
+Russell's definite description operator $\ithe{x}{s}{\phi(x)}$ denotes
+the unique element of $\isubset{x}{s}{\phi(x)}$. In case such an~$x$
+does not exists, or if there are several, the term is not well formed.
+The RZ translation essentially just asks the programmer to provide a
+suitable realizers,
+%
+\begin{equation*}
+  \ooblig{x{:}s,b}{\typeOf{\phi}}{
+    (\ototal{x}{s} \land \oapp{\oapp{\phi}{x}}{b} \land
+    \oforall{x'}{s}{
+      \oforall{c}{\typeOf{\phi}}{
+        (\oimply{\oapp{\oapp{\phi}{x'}}{c}}{\oper{s}{x}{x'}})
+      }
+    })
+    }{(x,b)},
+\end{equation*}
+%
+but it is the best RZ can do, since it cannot check that~$x$ exists,
+or that it is unique.
 
 
 \subsection{Translation of propositions}
