--- a/doc/cie/examples.tex
+++ b/doc/cie/examples.tex
@@ -116,7 +116,7 @@ $\mathtt{union}$ instead of~$a$.
 \subsection{Inductive types}
 \label{sec:inductive-types}
 
-We show how general inductive types can be expressed in RZ with
+We show how general inductive types can be expressed in RZ using
 dependent sets.
 
 \begin{figure}
