--- a/doc/cie/implementation.tex
+++ b/doc/cie/implementation.tex
@@ -85,6 +85,8 @@ val initial : 's -> ('s -> 's -> 's) -> (A.a -> 's) -> fin -> 's
 \end{source}
 with two added arguments (a \texttt{zero} and a \texttt{join} function) and an implicit argument for the type of lattice elements (here called \texttt{'s}).
 
+\internal{Chris}{Hoisting?}
+
 \label{sec:typechecking}
 
 
