--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -165,7 +165,7 @@ there is a unique element satisfying the predicate in question).
 From the parenthesized qualifiers in the previous paragraph, it is
 clear that checking the well-formedness of terms is not decidable. RZ
 checks what it can, but does not attempt any serious theorem proving.
-Uncheckable constraints remain as explicitly-marked \emph{obligations}
+Uncheckable constraints remain as explicitly-marked obligations
 in the final output, and must be verified by other means; the output
 can then be trusted to the extent that the obligations are satisfied.
 
