--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -1,17 +1,6 @@
 \section{Introduction}
 \label{sec:introduction}
 
-\internal{Andrej}{I am actually quite happy with the introduction. It
-  will appeal to constructive mathematicians. It will appeal to the
-  Type Two Effectivity people when we tell them it's all Type Two
-  Effectivity, anyhow. Then there is Coquand, who will probably say
-  ``oh yes'' with a French accent, and will want to know exactly how
-  it's different from Coq. The implementors of exact real arithmetic
-  will like it if Iztok and I manage to implement something using RZ
-  for the CCA conference. There won't be many PL people in Siena. I
-  think we're fine. So I'd rather get the rest of the paper done. I
-  don't think the introduction neds to be rewritten.}
-
 Given the specification of a mathematical structure (constants,
 functions, relations, and axioms), how do you know when a computer
 implementation is both correct and complete?
@@ -24,7 +13,7 @@ neutral element, and a unary operator that computes inverses.
 But for more interesting structures, especially those arising in
 mathematical analysis, the answer is much less obvious. How do we
 implement the real numbers (a Cauchy-complete Archimedean ordered
-field)? Or, what operations should be supported by a compact metric
+field)? Or, decided what operations must be supported by a compact metric
 space, or a space of smooth functions? Significant research goes into
 finding representations that provide a satisfactory theory of
 computability on such structures~\cite{Wei00,TZ98,Bla97,EL00}, and
