--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -16,6 +16,7 @@
 \newcommand{\cint}{\mathtt{int}}
 \newcommand{\clist}[1]{#1\;\mathtt{list}}
 \newcommand{\ctrue}{\mathtt{true}}
+\newcommand{\cbool}{\mathtt{bool}}
 \newcommand{\cwhile}[2]{\mathtt{while}\;#1\;\mathtt{do}\;#2\;\mathtt{done}}
 \newcommand{\cstring}[1]{\mathtt{"#1"}}
 \newcommand{\cprint}[1]{\mathtt{print\_string}\;#1}
